--- a/homework6.tex
+++ b/homework6.tex
@@ -294,9 +294,7 @@
     \emph{Remember that you do not have to find the transverse electric field.  Follow the derivation in $9.5.2$ with the 
     appropriate boundary conditions for TE waves.  You may start with equations $9.179$ and $9.180$ as a given.}
 
-      % \textcolor{hwColor}{
-      %   \\
-      % }
+    \pagebreak
 
     \item \textbf{9.40 (40 points)} Consider the \textbf{resonant cavity} produced by closing off the two ends of a rectangular 
     wave guide, at $z=0$ and at $z=d$, making a perfectly conducting empty box. Show that the resonant frequencies for 
@@ -309,9 +307,22 @@
     a finite box wavevectors in three dimensions that you used in quantum mechanics. 
     The energy-momentum relation is different because photons have no mass.}
 
-      % \textcolor{hwColor}{
-      %   \\
-      % }
+    \begin{center}
+      \includegraphics[height=14cm, width=16cm]{1.JPG}
+    \end{center}
+
+    \pagebreak
+
+    \begin{center}
+      \includegraphics[height=14cm, width=16cm]{1.JPG}
+    \end{center}
+
+    \pagebreak
+
+    \begin{center}
+      \includegraphics[height=14cm, width=16cm]{1.JPG}
+    \end{center}
+    
 
   \end{enumerate}
 
