--- a/homework6.tex
+++ b/homework6.tex
@@ -294,6 +294,16 @@
     \emph{Remember that you do not have to find the transverse electric field.  Follow the derivation in $9.5.2$ with the 
     appropriate boundary conditions for TE waves.  You may start with equations $9.179$ and $9.180$ as a given.}
 
+    \begin{center}
+      \includegraphics[height=14cm, width=16cm]{4.JPG}
+    \end{center}
+
+    \pagebreak
+
+    \begin{center}
+      \includegraphics[height=14cm, width=16cm]{5.JPG}
+    \end{center}
+    
     \pagebreak
 
     \item \textbf{9.40 (40 points)} Consider the \textbf{resonant cavity} produced by closing off the two ends of a rectangular 
